(fix): Manage menu overflow

--- a/app/style/menu.less
+++ b/app/style/menu.less
@@ -8,6 +8,7 @@
     background: white;
     z-index: 1;
     border-right: 1px solid #333;
+    overflow-y: auto;
 
     .m-lesson {
         padding: 16px;
